# dev-zu-smart-ingest

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .pydeps.yml  Dockerfile  README.md  alembic.ini  docker-compose.t4.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.beads/: 1118f1c3-ebeb-4a76-92f1-243350c23d3e.json
docs/: BUILD_GATES.md  CONTRIBUTING.md  MVP.md  PERFORMANCE.md  README.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: API.md  DEPLOYMENT.md  OBSERVABILITY.md  QUICKSTART.md
docs/reference/: CONFIGURATION.md  CONTRACTS.md
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: README.md  bench.py  check_build_gates.py  lint-architecture.sh  regression_check.py  smoke_test_pipeline.py
src/zubot_ingestion/: __init__.py  __main__.py  config.py
src/zubot_ingestion/api/: __init__.py  app.py
src/zubot_ingestion/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
src/zubot_ingestion/api/routes/: __init__.py  batches.py  extract.py  health.py  jobs.py  metrics.py  review.py
src/zubot_ingestion/domain/: __init__.py  entities.py  enums.py  protocols.py
src/zubot_ingestion/domain/pipeline/: __init__.py  companion.py  confidence.py  json_parser.py  sidecar.py  sidecar_schema.py  validation.py
src/zubot_ingestion/domain/pipeline/extractors/: __init__.py  document_type.py  drawing_number.py  filename_parser.py  title.py
src/zubot_ingestion/infrastructure/: __init__.py
src/zubot_ingestion/infrastructure/callback/: __init__.py  client.py
src/zubot_ingestion/infrastructure/chromadb/: __init__.py  writer.py
src/zubot_ingestion/infrastructure/database/: __init__.py  models.py  repository.py  session.py
src/zubot_ingestion/infrastructure/elasticsearch/: __init__.py  client.py  indexer.py
src/zubot_ingestion/infrastructure/logging/: __init__.py  config.py
src/zubot_ingestion/infrastructure/metrics/: prometheus.py
src/zubot_ingestion/infrastructure/ollama/: __init__.py  client.py  prompts.py
src/zubot_ingestion/infrastructure/otel/: __init__.py  instrumentation.py
src/zubot_ingestion/infrastructure/pdf/: __init__.py  processor.py
src/zubot_ingestion/services/: __init__.py  celery_app.py  job_service.py  orchestrator.py  task_queue.py
src/zubot_ingestion/shared/: __init__.py  constants.py  types.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_batches_route.py  test_jobs_route.py
tests/unit/: __init__.py  _extractor_helpers.py  test_app.py  test_auth_middleware.py  test_bench_harness.py  test_build_gates.py  test_callback_client.py  test_cap028_metrics.py  test_celery_app.py  test_celery_concurrency_config.py  test_celery_extract_task.py  test_celery_task_retry_and_result.py  test_chromadb_writer.py  test_companion_generator.py  test_companion_skip_heuristic.py  test_companion_validator.py  test_composition_root_sanity.py  test_confidence_calculator.py  test_config.py  test_constants.py  test_document_type_extractor.py  test_drawing_number_extractor.py  test_elasticsearch_indexer.py  test_extract_route.py  test_extraction_orchestrator.py  test_filename_parser.py  test_health_endpoint.py  test_job_service.py  test_job_service_lookup.py  test_json_response_parser.py  test_logging_config.py  test_ollama_client.py  test_ollama_client_pool.py  test_ollama_prompt_injection.py  test_orchestrator_otel.py  test_otel_instrumentation.py  test_pdf_processor.py  test_perf_settings.py  test_perf_tuning_integration.py  test_pipeline_wiring_smoke.py  (+9 more)
